--- a/index.html
+++ b/index.html
@@ -5,26 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body> 
     <section class="header">
         <!-- the nav bar -->
-        <nav class="nav">
-            <div class="lg"><a href="index.html"><img src="images/logo.png" alt="eduford-logo"></a></div>
-            <div class="menu-div" id="mnu">
-                <ul>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">ABOUT</a></li>
-                    <li><a href="">COURSE</a></li>
-                    <li><a href="">BLOG</a></li>
-                    <li><a href="">CONTACT</a></li>
+        <div class="wrapper">
+            <nav class="nav">
+                <div class="lg"><a href="index.html"><img src="images/logo.png" alt="eduford-logo"></a></div>
+                <div class="menu-div" id="mnu">
+                    <ul>
+                        <li><a href="">HOME</a></li>
+                        <li><a href="">ABOUT</a></li>
+                        <li><a href="">COURSE</a></li>
+                        <li><a href="">BLOG</a></li>
+                        <li><a href="">CONTACT</a></li>
+                    </ul>
                     <li class="dropdownicon" onclick="dropdownmenu()"><a href="javascript:void(0)">&#9776</a>
                     </li>
-                </ul>
-            </div>
-        </nav>
+                </div>
+            </nav>
+        </div>
     </section>
 </body>
 <script src="index.js" >
