finished the first section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="hm-section.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -16,8 +17,9 @@
         <div class="wrapper">
             <nav class="nav">
                 <div class="lg"><a href="index.html"><img src="images/logo.png" alt="eduford-logo"></a></div>
-                <div class="menu-div" id="mnu">
+                <div class="menu-div" id="mnu">  
                     <ul>
+                        <li class="remove-mnu"><a href="javascript:void(0)">&#8999</a></li>
                         <li><a href="">HOME</a></li>
                         <li><a href="">ABOUT</a></li>
                         <li><a href="">COURSE</a></li>
@@ -29,7 +31,44 @@
                 </div>
             </nav>
         </div>
+
+        <!-- header text -->
+        <div class="wlcm-txt">
+            <h1>World's Biggest University</h1>
+            <p>Making website is now one of the easiest thing in the world.You neeed to learn HTML,<br> CSS,<br>
+                Javascript and you are good to go.</p>  
+                <button class="visit-us">Visit us to know More</button>
+        </div>
     </section>
+    <div class="container">
+        <div class="row">
+            <div class="sec1-txt">
+                <h3>Courses We Offer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="sec1 col-3">
+                <div class="sec1-div">
+                    <h4>Intermediate</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus pariatur dolore tenetur reiciendis, numquam natus magnam beatae cupiditate alias sequi.</p>
+                </div>
+            </div>
+            <div class="sec1 col-3">
+                <div class="sec1-div">
+                    <h4>Degree</h4>
+                <p> Deleniti blanditiis velit aperiam, doloremque amet illum explicabo voluptates quasi veritatis fugit, animi libero asperiores temporibus omnis? Ut, alias unde.</p>
+                </div>
+            </div>
+            <div class="sec1 col-3">
+                <div class="sec1-div"> 
+                    <h4>Post Graduation</h4>
+                <p>Quod dicta, sapiente ab ut voluptates odit ipsum eos earum modi nihil sunt soluta! Explicabo omnis sunt quam dolor hic?</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </body>
 <script src="index.js" >
     
