done with the second section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <button class="visit-us">Visit us to know More</button>
         </div>
     </section>
+    <!-- section 1 courses we offer  -->
     <div class="container">
         <div class="row">
             <div class="sec1-txt">
@@ -68,6 +69,40 @@
             </div>
         </div>
 
+    </div>
+    <div class="container">
+     <div class="row">
+        <div class="sec2-div">
+            <h4>Our Global Campus</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+        </div>
+     </div>
+     <div class="row">
+        <div class="sec2 col-3">
+            <div class="sec2-div-img">
+                <img src="images/london.png" alt="">
+               <div class="sec2-row2-txt">
+                  <h2>LONDON</h2>
+              </div>
+            </div>   
+        </div>
+        <div class="sec2 col-3">
+            <div class="sec2-div-img">
+                 <img src="images/newyork.png" alt="">
+                <div class="sec2-row2-txt">
+                    <h2>NEWYORK</h2>
+                </div>
+            </div>
+        </div>
+        <div class="sec2 col-3">
+            <div class="sec2-div-img">
+                <img src="images/washington.png" alt="">
+                <div class="sec2-row2-txt">
+                    <h2>WASHINGTON</h2>
+                </div>
+            </div>
+        </div>
+     </div>
     </div>
 </body>
 <script src="index.js" >
