finished section 3 starting section4

--- a/index.html
+++ b/index.html
@@ -104,6 +104,67 @@
         </div>
      </div>
     </div>
+    <div class="section3 container">
+        <div class="section3-hd row">
+            <div class="section3-hd-txt">
+                <h3>Our Facilities</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+        <div class="section3-bd row">
+         <div class="section3 col-3">
+            <div class="section3-col">
+                <div class="section3-col-img">
+                    <img src="images/library.png" alt="">
+                </div> 
+                <div class="section3-col-txt">
+                    <h4>World Class Library</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam eaque nisi cumque rem, explicabo tempore!</p>
+                </div>
+            </div>
+         </div>
+         <div class="section3 col-3">
+            <div class="section3-col">
+               <div class="section3-col-img">
+                    <img src="images/basketball.png" alt="">
+               </div>
+               <div class="section3-col-txt">
+                    <h4>Largest Play Ground</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt aliquid ratione temporibus architecto a maxime?</p>
+               </div>
+            </div>
+         </div>
+         <div class="section3 col-3">
+            <div class="section3-col">
+                <div class="section3-col-img">
+                    <img src="images/cafeteria.png" alt="">
+                </div> 
+                <div class="section3-col-txt">
+                    <h4>Tasty and Healthy Food</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus deleniti accusamus voluptas possimus aliquam facilis?</p>
+                </div>
+            </div>
+         </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="sec4-txt">
+                <h4>What Our Students Says</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea eaque officia cum, expedita amet deleniti nesciunt optio ratione, architecto pariatur a. Quia enim minima odio.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <img src="images/user1.jpg" alt="">
+                <div class="user-cmnt"></div>
+            </div>
+            <div class="col-4">
+                <img src="images/user1.jpg" alt="">
+                <div class="user-cmnt"></div>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="index.js" >
     
