remains the footer for d home page

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
          </div>
         </div>
     </div>
-    <div class="container">
+    <div class="section-4 container">
         <div class="row">
             <div class="sec4-txt">
                 <h4>What Our Students Says</h4>
@@ -155,13 +155,37 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-4">
+            <div class="sec4-col col-4">
                 <img src="images/user1.jpg" alt="">
-                <div class="user-cmnt"></div>
+                <div class="user-cmnt">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nobis eligendi voluptates quas dolorum sunt enim repellendus, reprehenderit aliquid. Totam a</p>
+                    <h3>Brenda Cherotich</h3>
+                    <i>*</i>
+                    <i>*</i>
+                    <i>*</i>
+                    <i>*</i>
+                    <i>*</i>
+                </div>
             </div>
-            <div class="col-4">
-                <img src="images/user1.jpg" alt="">
-                <div class="user-cmnt"></div>
+            <div class="sec4-col col-4">
+                <img src="images/user2.jpg" alt="">
+                <div class="user-cmnt">
+                    <p>Eligendi tempora aliquam totam numquam eius illo accusamus, officia quidem dicta animi ullam natus magni impedit doloremque sapiente in quaerat p</p>
+                    <h3>Samuel Macharia</h3>
+                    <i>*</i>
+                    <i>*</i>
+                    <i>*</i>
+                    <i>*</i>
+                
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="section-5 container">
+        <div class="row">
+            <div class="enroll col-9">
+                <h2>Enroll For Our Various Online Courses Anywhere From The World</h2>
+                <button class="enroll-txt">Contact us</button>
             </div>
         </div>
     </div>
