course page 50% done

--- a/pages/course.html
+++ b/pages/course.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/about.css" />
+    <link rel="stylesheet" href="../css/course.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -33,7 +34,7 @@
                         </li>
                         <li><a href="../index.html">HOME</a></li>
                         <li><a href="about.html">ABOUT</a></li>
-                        <li><a href="course.html">COURSE</a></li>
+                        <li><a href="">COURSE</a></li>
                         <li><a href="">BLOG</a></li>
                         <li><a href="">CONTACT</a></li>
                     </ul>
@@ -46,23 +47,31 @@
 
         <!-- header text -->
         <div class="wlcm-txt">
-            <h1>About Us</h1>
+            <h1>Our Courses</h1>
         </div>
     </section>
-    <!-- about section -->
-    <section class="abt-sec container">
-        <div class="wrapper1 row">
-            <div class="abt-txt col-4">
-                <h1>We are the World's largest University</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, libero. Quibusdam, reprehenderit fuga saepe voluptas debitis eaque, error cum aut culpa, iste aperiam modi consequuntur nobis corporis vitae sit atque. Neque natus perferendis, odit placeat provident libero quo repellat enim itaque esse rem earum magnam optio et saepe, aut porro.</p>
-                <button class="visit-us">explore Now</button>
+    <!-- course section1 -->
+    <section class="container ">
+      <div class="cou-wrapper1">
+        <h1>courses we offer</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+      </div>
+      <div class="row cou-wrapper2">
+            <div class="col-3 cou-bx">
+                <h3>intermediate</h3>
+                <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Possimus Pariatur Dolore Tenetur Reiciendis, Numquam Natus Magnam Beatae Cupiditate Alias Sequi.</p>
             </div>
-            <div class="abt-img col-4">
-                <img src="../images/about.jpg" alt="About us">
+            <div class="col-3 cou-bx">
+                <h3>degree</h3>
+                <p>Deleniti Blanditiis Velit Aperiam, Doloremque Amet Illum Explicabo Voluptates Quasi Veritatis Fugit, Animi Libero Asperiores Temporibus Omnis? Ut, Alias Unde.</p>
             </div>
-        </div>
-
+            <div class="col-3 cou-bx">
+                <h3>post graduation</h3>
+                <p>Quod Dicta, Sapiente Ab Ut Voluptates Odit Ipsum Eos Earum Modi Nihil Sunt Soluta! Explicabo Omnis Sunt Quam Dolor Hic?</p>
+            </div>
+      </div>
     </section>
+    
 
     <!-- footer  -->
     <div class="footer container">
