--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                                     class="fa-solid fa-rectangle-xmark"></i></a></li>
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="pages/about.html">ABOUT</a></li>
-                        <li><a href="">COURSE</a></li>
+                        <li><a href="pages/course.html">COURSE</a></li>
                         <li><a href="">BLOG</a></li>
                         <li><a href="">CONTACT</a></li>
                     </ul>
