finished the course page

--- a/pages/course.html
+++ b/pages/course.html
@@ -52,26 +52,52 @@
     </section>
     <!-- course section1 -->
     <section class="container ">
-      <div class="cou-wrapper1">
-        <h1>courses we offer</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-      </div>
-      <div class="row cou-wrapper2">
+        <div class="cou-wrapper1">
+            <h1>courses we offer</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        </div>
+        <div class="row cou-wrapper2">
             <div class="col-3 cou-bx">
                 <h3>intermediate</h3>
-                <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Possimus Pariatur Dolore Tenetur Reiciendis, Numquam Natus Magnam Beatae Cupiditate Alias Sequi.</p>
+                <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Possimus Pariatur Dolore Tenetur Reiciendis,
+                    Numquam Natus Magnam Beatae Cupiditate Alias Sequi.</p>
             </div>
             <div class="col-3 cou-bx">
                 <h3>degree</h3>
-                <p>Deleniti Blanditiis Velit Aperiam, Doloremque Amet Illum Explicabo Voluptates Quasi Veritatis Fugit, Animi Libero Asperiores Temporibus Omnis? Ut, Alias Unde.</p>
+                <p>Deleniti Blanditiis Velit Aperiam, Doloremque Amet Illum Explicabo Voluptates Quasi Veritatis Fugit,
+                    Animi Libero Asperiores Temporibus Omnis? Ut, Alias Unde.</p>
             </div>
             <div class="col-3 cou-bx">
                 <h3>post graduation</h3>
-                <p>Quod Dicta, Sapiente Ab Ut Voluptates Odit Ipsum Eos Earum Modi Nihil Sunt Soluta! Explicabo Omnis Sunt Quam Dolor Hic?</p>
+                <p>Quod Dicta, Sapiente Ab Ut Voluptates Odit Ipsum Eos Earum Modi Nihil Sunt Soluta! Explicabo Omnis
+                    Sunt Quam Dolor Hic?</p>
             </div>
-      </div>
+        </div>
     </section>
-    
+    <section class="container">
+        <div class="row cou-wrapper3">
+            <h1>our Facilities</h1>
+            <p>Lorem Ipsum, Dolor Sit Amet Consectetur Adipisicing Elit.</p>
+        </div>
+        <div class="cou-wrapper4 row">
+            <div class="cou-bx2 col-3">
+                <img src="../images/library.png" alt="">
+                <h4>world class library</h4>
+                <p>Lorem Ipsum Dolor, Sit Amet Consectetur Adipisicing Elit. Totam Eaque Nisi Cumque Rem, Explicabo Tempore!</p>
+            </div>
+            <div class="cou-bx2 col-3">
+                <img src="../images/basketball.png" alt="">
+                <h4>largest play ground</h4>
+                <p>Lorem Ipsum Dolor Sit, Amet Consectetur Adipisicing Elit. Nesciunt Aliquid Ratione Temporibus Architecto A Maxime?</p>
+            </div>
+            <div class="cou-bx2 col-3">
+                <img src="../images/cafeteria.png" alt="">
+                <h4>tasty and healthy food</h4>
+                <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Repellendus Deleniti Accusamus Voluptas Possimus Aliquam Facilis?</p>
+            </div>
+        </div>
+    </section>
+
 
     <!-- footer  -->
     <div class="footer container">
