--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="pages/about.html">ABOUT</a></li>
                         <li><a href="pages/course.html">COURSE</a></li>
-                        <li><a href="">BLOG</a></li>
+                        <li><a href="pages/blog.html">BLOG</a></li>
                         <li><a href="">CONTACT</a></li>
                     </ul>
                     <li class="dropdownicon" onclick="dropdownmenu()"><a href="javascript:void(0)"><i
