--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <li><a href="pages/about.html">ABOUT</a></li>
                         <li><a href="pages/course.html">COURSE</a></li>
                         <li><a href="pages/blog.html">BLOG</a></li>
-                        <li><a href="">CONTACT</a></li>
+                        <li><a href="pages/contact.html">CONTACT</a></li>
                     </ul>
                     <li class="dropdownicon" onclick="dropdownmenu()"><a href="javascript:void(0)"><i
                                 class="fa-solid fa-bars"></i></a>
