--- a/pages/blog.html
+++ b/pages/blog.html
@@ -36,7 +36,7 @@
                         <li><a href="about.html">ABOUT</a></li>
                         <li><a href="course.html">COURSE</a></li>
                         <li><a href="blog.html">BLOG</a></li>
-                        <li><a href="">CONTACT</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                     <li class="dropdownicon" onclick="dropdownmenu()">
                         <a href="javascript:void(0)"><i class="fa-solid fa-bars"></i></a>
