--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="author" content="Oseahumen Agboifoh">
+    <meta name="description" content="practice html css and js website ">
+    <meta name="keywords" content="eduford,campus,website,University,school,library,github,Oseahumen,Agboifoh,john">
+    <title>Eduford webiste clone</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/hm-section.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
