--- a/pages/about.html
+++ b/pages/about.html
@@ -57,7 +57,10 @@
         <div class="wrapper1 row">
             <div class="abt-txt col-4">
                 <h1>We are the World's largest University</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, libero. Quibusdam, reprehenderit fuga saepe voluptas debitis eaque, error cum aut culpa, iste aperiam modi consequuntur nobis corporis vitae sit atque. Neque natus perferendis, odit placeat provident libero quo repellat enim itaque esse rem earum magnam optio et saepe, aut porro.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, libero. Quibusdam, reprehenderit fuga
+                    saepe voluptas debitis eaque, error cum aut culpa, iste aperiam modi consequuntur nobis corporis
+                    vitae sit atque. Neque natus perferendis, odit placeat provident libero quo repellat enim itaque
+                    esse rem earum magnam optio et saepe, aut porro.</p>
                 <button class="visit-us">explore Now</button>
             </div>
             <div class="abt-img col-4">
