--- a/pages/blog.html
+++ b/pages/blog.html
@@ -54,26 +54,41 @@
         </div>
     </section>
     <!-- blog section -->
-     <section class="container">
+    <section class="container">
         <div class="row blog-sec">
             <div class="blog-col1 col-3">
                 <img src="../images/certificate.jpg" alt="">
                 <h4>Our Certificate & Online Programs For 2021</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque nulla repellendus veritatis nihil autem dicta molestiae voluptatibus ex expedita suscipit quidem assumenda laboriosam, dolorem dolor error soluta numquam magnam praesentium reprehenderit recusandae earum neque aliquam odit voluptas. Quos mollitia odio vero eius quidem. Amet officia ipsum saepe vero eius doloremque!</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque nulla repellendus veritatis
+                    nihil autem dicta molestiae voluptatibus ex expedita suscipit quidem assumenda laboriosam, dolorem
+                    dolor error soluta numquam magnam praesentium reprehenderit recusandae earum neque aliquam odit
+                    voluptas. Quos mollitia odio vero eius quidem. Amet officia ipsum saepe vero eius doloremque!</p>
                 <br>
-                <p>Laborum unde omnis distinctio nemo impedit eligendi quis aperiam, corrupti ut fugiat consequatur provident, libero earum eveniet sapiente aut delectus vero ipsa quae explicabo dolor laboriosam repellat. Recusandae animi nam eaque fugit sint, eligendi placeat, possimus temporibus earum pariatur odit ipsum neque, tempore quia magnam omnis eveniet magni consequuntur dolor?</p>
+                <p>Laborum unde omnis distinctio nemo impedit eligendi quis aperiam, corrupti ut fugiat consequatur
+                    provident, libero earum eveniet sapiente aut delectus vero ipsa quae explicabo dolor laboriosam
+                    repellat. Recusandae animi nam eaque fugit sint, eligendi placeat, possimus temporibus earum
+                    pariatur odit ipsum neque, tempore quia magnam omnis eveniet magni consequuntur dolor?</p>
                 <br>
-                <p>Natus odio esse ad debitis quam laudantium aliquam nihil, quis quibusdam eum perferendis suscipit expedita optio asperiores temporibus, assumenda numquam? Amet aliquid iure illum, blanditiis provident quo nostrum laborum perferendis nisi fugit nemo ipsa quidem alias natus? Id rem tenetur, voluptatum doloremque, consectetur eveniet excepturi, consequatur ea magni aut repudiandae.</p>
+                <p>Natus odio esse ad debitis quam laudantium aliquam nihil, quis quibusdam eum perferendis suscipit
+                    expedita optio asperiores temporibus, assumenda numquam? Amet aliquid iure illum, blanditiis
+                    provident quo nostrum laborum perferendis nisi fugit nemo ipsa quidem alias natus? Id rem tenetur,
+                    voluptatum doloremque, consectetur eveniet excepturi, consequatur ea magni aut repudiandae.</p>
                 <br>
-                <p>Porro laborum eaque dolore! Eveniet voluptatibus sapiente debitis dolorem minima quisquam, assumenda et laudantium vero voluptas fuga corporis quia nihil! Libero ipsum sequi in illum similique iste magni officiis natus, odit maiores iure non obcaecati tenetur cum, eius et dolores veniam? Blanditiis labore eum voluptate doloribus magnam ipsa atque ipsum?</p>
+                <p>Porro laborum eaque dolore! Eveniet voluptatibus sapiente debitis dolorem minima quisquam, assumenda
+                    et laudantium vero voluptas fuga corporis quia nihil! Libero ipsum sequi in illum similique iste
+                    magni officiis natus, odit maiores iure non obcaecati tenetur cum, eius et dolores veniam?
+                    Blanditiis labore eum voluptate doloribus magnam ipsa atque ipsum?</p>
                 <br>
-                <p>Nostrum pariatur maxime eligendi quis quam nisi laborum! Accusamus omnis beatae, velit cum deleniti neque. Magnam vitae hic odio reiciendis impedit sapiente quidem doloremque unde quos accusamus! Ipsa placeat sunt, eaque officiis quidem aliquid quisquam recusandae rerum saepe praesentium laboriosam nesciunt. Nisi deleniti debitis non dolorum eius. Non, repellat cumque!</p>
+                <p>Nostrum pariatur maxime eligendi quis quam nisi laborum! Accusamus omnis beatae, velit cum deleniti
+                    neque. Magnam vitae hic odio reiciendis impedit sapiente quidem doloremque unde quos accusamus! Ipsa
+                    placeat sunt, eaque officiis quidem aliquid quisquam recusandae rerum saepe praesentium laboriosam
+                    nesciunt. Nisi deleniti debitis non dolorum eius. Non, repellat cumque!</p>
                 <br>
                 <br>
                 <form action="" method="get" class="blog-form">
-                   <div><input type="text" name="" id="name" placeholder="enter your name"></div>
+                    <div><input type="text" name="" id="name" placeholder="enter your name"></div>
                     <div><input type="email" name="" id="email" placeholder="email"></div>
-                   <div> <textarea name="comment" id="comment"  rows="5" placeholder="comment....."></textarea></div>
+                    <div> <textarea name="comment" id="comment" rows="5" placeholder="comment....."></textarea></div>
                     <button class="visit-us">post comment</button>
                 </form>
             </div>
@@ -88,7 +103,7 @@
                 <p><span>commerce</span><span>30</span></p>
             </div>
         </div>
-     </section>
+    </section>
     <!-- footer  -->
     <div class="footer container">
         <div class="custom-shape-divider-bottom-1677587616">
