--- a/pages/course.html
+++ b/pages/course.html
@@ -86,17 +86,20 @@
             <div class="cou-bx2 col-3">
                 <img src="../images/library.png" alt="">
                 <h4>world class library</h4>
-                <p>Lorem Ipsum Dolor, Sit Amet Consectetur Adipisicing Elit. Totam Eaque Nisi Cumque Rem, Explicabo Tempore!</p>
+                <p>Lorem Ipsum Dolor, Sit Amet Consectetur Adipisicing Elit. Totam Eaque Nisi Cumque Rem, Explicabo
+                    Tempore!</p>
             </div>
             <div class="cou-bx2 col-3">
                 <img src="../images/basketball.png" alt="">
                 <h4>largest play ground</h4>
-                <p>Lorem Ipsum Dolor Sit, Amet Consectetur Adipisicing Elit. Nesciunt Aliquid Ratione Temporibus Architecto A Maxime?</p>
+                <p>Lorem Ipsum Dolor Sit, Amet Consectetur Adipisicing Elit. Nesciunt Aliquid Ratione Temporibus
+                    Architecto A Maxime?</p>
             </div>
             <div class="cou-bx2 col-3">
                 <img src="../images/cafeteria.png" alt="">
                 <h4>tasty and healthy food</h4>
-                <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Repellendus Deleniti Accusamus Voluptas Possimus Aliquam Facilis?</p>
+                <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Repellendus Deleniti Accusamus Voluptas
+                    Possimus Aliquam Facilis?</p>
             </div>
         </div>
     </section>
