--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content="practice html css and js website ">
     <meta name="keywords" content="eduford,campus,website,University,school,library,github,Oseahumen,Agboifoh,john">
     <title>Eduford webiste clone</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4872354916309852"
+     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/hm-section.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
